# backend/app/Features/Quizz/Http/Resources/QuizAccessResource.php
@@ -14,6 +14,7 @@ final class QuizAccessResource extends JsonResource
             'course_uuid' => $this->courseUuid,
             'quiz_uuid' => $this->quizUuid,
             'can_access' => $this->canAccess,
+            'quizPassed' => $this->quizPassed,
             'required_lessons' => $this->requiredLessons,
             'completed_required_lessons' => $this->completedRequiredLessons,
             'reason' => $this->reason,
